<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/label_title_service_control" >
        <CheckBoxPreference
            android:key="enabled"
            android:summaryOff="@string/label_msg_enabled"
            android:summaryOn="@string/label_msg_disabled"
            android:title="@string/label_title_enabled" />
    </PreferenceCategory>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="statusnotify"
        android:summaryOff="@string/label_off_status_notify"
        android:summaryOn="@string/label_on_status_notify"
        android:title="@string/label_title_status_notify" />

    <!--
    <PreferenceCategory android:title="@string/title_behaviour" >
        <ListPreference
            android:defaultValue="block"
            android:entries="@array/handle_call"
            android:entryValues="@array/handle_call_values"
            android:key="handle_call"
            android:title="@string/title_handle_call" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="handle_history"
            android:summaryOff="@string/sum_off_history"
            android:summaryOn="@string/sum_on_history"
            android:title="@string/title_handle_history" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_number_rules" >
        <CheckBoxPreference
            android:key="block_all"
            android:summary="@string/sum_block_all"
            android:title="@string/title_block_all" />
        <CheckBoxPreference
            android:key="block_unknown"
            android:summary="@string/sum_block_unknown"
            android:title="@string/title_block_unknown" />
        <CheckBoxPreference
            android:key="block_list"
            android:summary="@string/sum_block_list"
            android:title="@string/title_block_list" />

        <PreferenceScreen
            android:summary="@string/sum_block_list_mngmnt"
            android:title="@string/title_block_list_mngmnt" >
            <intent
                android:data="mydata"
                android:targetClass="hu.zoliweb.android.dndcallblocker.DNDCallBlockerBlackListActivity"
                android:targetPackage="hu.zoliweb.android.dndcallblocker" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_number_exceptions" >
        <ListPreference
            android:defaultValue="none"
            android:entries="@array/number_exceptions"
            android:entryValues="@array/number_exceptions_values"
            android:key="number_exceptions"
            android:title="@string/title_number_exceptions" />
    </PreferenceCategory>
    -->

</PreferenceScreen>